Fix popup card using scrollbar Fix x card

--- a/css/style.css
+++ b/css/style.css
@@ -397,12 +397,13 @@ body {
   display: none;
   justify-content: space-around;
   position: fixed;
+  align-items: center;
   top: 0;
   left: 0;
   width: 100%;
-  max-height: 100vh;
+  height: 100vh;
   background: #c1c7d0;
-  z-index: 1;
+  z-index: 999;
 }
 
 .works-modal {
@@ -411,7 +412,7 @@ body {
   justify-content: space-between;
   list-style: none;
   width: 343px;
-  height: 713px;
+  height: 600px;
   padding: 18px 16px;
   background: #fff;
   border: 1px solid #dfe1e6;
@@ -875,9 +876,10 @@ textarea:focus {
   .works-modal {
     width: 90%;
     max-width: 1156px;
-    height: 1080px;
+    height: 90vh;
     padding: 16px 24px;
     margin: 20px 0;
+    overflow-y: scroll;
   }
 
   .works-modal .project-img-wrapper {
